# libsql

./: .gitignore  .travis.yml  Makefile.am  configure.ac  connect.c  defaults.c  engine.c  isql.c  libsql-engine.h  libsql-uninstalled.pc.in  libsql.h  libsql.pc.in  schema.c  statement.c
debian/: control  rules
libedit/: .gitignore
mysql/: mysql-connect.c  mysql-engine.c  mysql-query.c  mysql-statement.c  p_mysql.h
postgres/: Makefile.am  p_postgres.h  pg-connect.c  pg-engine.c  pg-field.c  pg-query.c  pg-schema.c  pg-statement.c
sqlite/: Makefile.am  p_sqlite.h  sqlite-connect.c  sqlite-engine.c  sqlite-field.c  sqlite-query.c  sqlite-schema.c  sqlite-statement.c
